// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Dialog /> > Default story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary et5j5k2 css-1gtff9l-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
  tabindex="0"
  type="button"
>
  <span
    class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
  >
    Open 
    M
  </span>
</button>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 1`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e18l2rxq3 css-168n563-MuiTypography-root-MuiDialogTitle-root-StyledDialogTitle"
  data-testid="dialog-title"
  id="_r_3_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary e1fdmmfb0 et5j5k2 css-162feww-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-SmallButtonStyles-StyledButton-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      <div
        class="css-1q8yjse-StyledIcon emi0zh40"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
          data-file-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq0 css-otfrvj-MuiTypography-root-Overline"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq2 css-l8n468-MuiTypography-root-Title"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq1 css-1a1bxla-MuiTypography-root-Subtitle"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 2`] = `
<div
  class="MuiDialogContent-root e1ub36ac0 css-174wrr2-MuiDialogContent-root-StyledDialogContent"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 3`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing esa0jqu0 css-125x3xs-MuiDialogActions-root-StyledDialogActions"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Secondary Action
    </span>
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 css-ugwam9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Primary Action
    </span>
  </button>
</div>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 4`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e18l2rxq3 css-168n563-MuiTypography-root-MuiDialogTitle-root-StyledDialogTitle"
  data-testid="dialog-title"
  id="_r_5_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e1fdmmfb0 et5j5k2 css-14putmm-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-MediumButtonStyles-StyledButton-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      <div
        class="css-1q8yjse-StyledIcon emi0zh40"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
          data-file-name="IconXMarkLarge"
          data-testid="IconXMarkLarge"
          fillcontrast="white"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        />
      </div>
    </span>
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq0 css-otfrvj-MuiTypography-root-Overline"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq2 css-l8n468-MuiTypography-root-Title"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq1 css-1a1bxla-MuiTypography-root-Subtitle"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 5`] = `
<div
  class="MuiDialogContent-root e1ub36ac0 css-174wrr2-MuiDialogContent-root-StyledDialogContent"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 6`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing esa0jqu0 css-125x3xs-MuiDialogActions-root-StyledDialogActions"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Secondary Action
    </span>
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 css-ugwam9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Primary Action
    </span>
  </button>
</div>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 7`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e18l2rxq3 css-168n563-MuiTypography-root-MuiDialogTitle-root-StyledDialogTitle"
  data-testid="dialog-title"
  id="_r_7_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary e1fdmmfb0 et5j5k2 css-z5oz1x-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      <div
        class="css-1q8yjse-StyledIcon emi0zh40"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
          data-file-name="IconXMarkLarge"
          data-testid="IconXMarkLarge"
          fillcontrast="white"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        />
      </div>
    </span>
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq0 css-otfrvj-MuiTypography-root-Overline"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq2 css-l8n468-MuiTypography-root-Title"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq1 css-1a1bxla-MuiTypography-root-Subtitle"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 8`] = `
<div
  class="MuiDialogContent-root e1ub36ac0 css-174wrr2-MuiDialogContent-root-StyledDialogContent"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 9`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing esa0jqu0 css-125x3xs-MuiDialogActions-root-StyledDialogActions"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Secondary Action
    </span>
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 css-ugwam9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Primary Action
    </span>
  </button>
</div>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 10`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e18l2rxq3 css-168n563-MuiTypography-root-MuiDialogTitle-root-StyledDialogTitle"
  data-testid="dialog-title"
  id="_r_9_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary e1fdmmfb0 et5j5k2 css-z5oz1x-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      <div
        class="css-1q8yjse-StyledIcon emi0zh40"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-thg7jc-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
          data-file-name="IconXMarkLarge"
          data-testid="IconXMarkLarge"
          fillcontrast="white"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        />
      </div>
    </span>
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq0 css-otfrvj-MuiTypography-root-Overline"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq2 css-l8n468-MuiTypography-root-Title"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq1 css-1a1bxla-MuiTypography-root-Subtitle"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 11`] = `
<div
  class="MuiDialogContent-root e1ub36ac0 css-174wrr2-MuiDialogContent-root-StyledDialogContent"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> > Dialog all sizes match the snapshots 12`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing esa0jqu0 css-125x3xs-MuiDialogActions-root-StyledDialogActions"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Secondary Action
    </span>
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 css-ugwam9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Primary Action
    </span>
  </button>
</div>
`;

exports[`<Dialog /> > renders Dialog left positioned buttons 1`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing esa0jqu0 css-18gtn16-MuiDialogActions-root-StyledDialogActions"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary et5j5k2 css-ugwam9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Primary Action
    </span>
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
    tabindex="0"
    type="button"
  >
    <span
      class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
    >
      Secondary Action
    </span>
  </button>
</div>
`;

exports[`<Dialog /> > renders Dialog without title X button 1`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e18l2rxq3 css-168n563-MuiTypography-root-MuiDialogTitle-root-StyledDialogTitle"
  data-testid="dialog-title"
  id="_r_n_"
>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq0 css-otfrvj-MuiTypography-root-Overline"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq2 css-l8n468-MuiTypography-root-Title"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e18l2rxq1 css-1a1bxla-MuiTypography-root-Subtitle"
  >
    Optional Subtitle
  </p>
</h2>
`;
